// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  DLR
</Text>
`;

exports[`renders 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  Hammersmith & City
</Text>
`;
